--- a/index.html
+++ b/index.html
@@ -24,12 +24,11 @@
                         <p class="name" style="text-align: center;">
                             Andrew Luo
                         </p>
-                        <p> I am a PhD student at <a href="https://www.cmu.edu/">Carnegie Mellon University</a>.
+                        <p> I am an incoming Assistant Professor at the University of Hong Kong at a joint position between the <a href="https://datascience.hku.hk/">Musketeers Foundation Institute of Data Science</a> and the <a href="https://psychology.hku.hk/">Psychology Department</a>.
                         </p>
-                        <p>
-                            At CMU, I am affiliated with the Neuroscience Institute and the Machine Learning Department,
-                            pursuing a <a href="https://www.ml.cmu.edu/academics/joint-ml-phd.html">joint PhD in Neural
-                            Computation & Machine Learning</a>. I am co-advised by <a
+                        <p> Formerly a PhD student at <a href="https://www.cmu.edu/">Carnegie Mellon University</a> (defended Sept 2024), affiliated with the Machine Learning Department and the Neuroscience Institute.
+                            I completed a <a href="https://www.ml.cmu.edu/academics/joint-ml-phd.html">joint PhD in Neural
+                            Computation & Machine Learning</a>. I was co-advised by <a
                                 href="https://www.cs.cmu.edu/~lwehbe/">Leila Wehbe</a> and <a
                                 href="https://www.cmu.edu/dietrich/psychology/directory/core-training-faculty/tarr-michael.html">Michael
                             Tarr</a>. I earned my undergraduate degree in Computer Science from MIT in 2019, and a Master of Science in Machine Learning Research from CMU. </p><p>My current
