--- a/index.html
+++ b/index.html
@@ -24,22 +24,22 @@
                         <p class="name" style="text-align: center;">
                             Andrew Luo
                         </p>
-                        <p> I am an incoming Assistant Professor at the University of Hong Kong at a joint position between the <a href="https://datascience.hku.hk/">Musketeers Foundation Institute of Data Science</a> and the <a href="https://psychology.hku.hk/">Psychology Department</a>.
+                        <p> I am a tenure-track Assistant Professor at the <a herf="https://www.hku.hk/">University of Hong Kong</a> jointly appointed by <a href="https://datascience.hku.hk/">Musketeers Foundation Institute of Data Science</a> and the <a href="https://psychology.hku.hk/people/andrew-luo/">Psychology Department</a> starting in 2024 November.
                         </p>
-                        <p> Formerly a PhD student at <a href="https://www.cmu.edu/">Carnegie Mellon University</a> (defended Sept 2024), affiliated with the Machine Learning Department and the Neuroscience Institute.
-                            I completed a <a href="https://www.ml.cmu.edu/academics/joint-ml-phd.html">joint PhD in Neural
-                            Computation & Machine Learning</a>. I was co-advised by <a
-                                href="https://www.cs.cmu.edu/~lwehbe/">Leila Wehbe</a> and <a
+                        <p>
+                            I received my <a href="https://www.ml.cmu.edu/academics/joint-ml-phd.html">joint PhD in Neural
+                            Computation & Machine Learning</a> from Carnegie Mellon University, where I worked with <a
                                 href="https://www.cmu.edu/dietrich/psychology/directory/core-training-faculty/tarr-michael.html">Michael
-                            Tarr</a>. I earned my undergraduate degree in Computer Science from MIT in 2019, and a Master of Science in Machine Learning Research from CMU. </p><p>My current
-                            research focuses on computational methods for studying visual perception in the human brain, with experience in 3D generative models.
+                            Tarr</a> and <a
+                                href="https://www.cs.cmu.edu/~lwehbe/">Leila Wehbe</a>. I earned my undergraduate degree in Computer Science from MIT in 2019, and a Master of Science in Machine Learning Research from CMU. </p><p>My work focuses on understanding the computational principles underlying human visual perception and how these principles can inform the development of more intelligent machines. I use computational models, including deep generative models, to investigate how the brain processes visual stimuli and forms meaningful representations. Ultimately, I aim to bridge the gap between human and machine vision, leading to both a deeper understanding of human cognition and advancements in artificial intelligence.
+
+
                         </p>
+                        <p>I am recruiting </p>
                         <p style="text-align:center">
                             <a href="mailto:luo_andrew@outlook.com">Email</a> &nbsp;/&nbsp;
-                            <a href="mailto:afluo@andrew.cmu.edu">CMU Email</a> &nbsp;/&nbsp;
-                            <!--                  <a href="data/JonBarron-CV.pdf">CV</a> &nbsp;/&nbsp;-->
-                            <!--                  <a href="data/JonBarron-bio.txt">Bio</a> &nbsp;/&nbsp;-->
-                            <a href="https://scholar.google.com/citations?user=bWYvvkUAAAAJ">Google Scholar</a> &nbsp;/&nbsp;
+                            <a href="mailto:aluo@hku.hk">HKU Email</a> &nbsp;/&nbsp;
+                            <a href="https://scholar.google.com/citations?hl=en&user=bWYvvkUAAAAJ&view_op=list_works&sortby=pubdate">Google Scholar</a> &nbsp;/&nbsp;
                             <!--                  <a href="https://twitter.com/jon_barron">Twitter</a> &nbsp;/&nbsp;-->
                             <a href="https://github.com/aluo-x">Github</a>&nbsp;/&nbsp;
                             <a href="./wechat.html">WeChat</a>
@@ -47,7 +47,7 @@
                     </td>
                     <td style="padding:2.5%;width:40%;max-width:40%">
                         <img style="width:100%;max-width:100%" alt="profile photo"
-                                                            src="images/aluo_circle_small.png" class="hoverZoomLink">
+                                                            src="images/profile_2.jpg" class="hoverZoomLink">
                     </td>
                 </tr>
                 </tbody>
@@ -59,8 +59,7 @@
                     <td style="padding:20px;width:100%;vertical-align:middle">
                         <h2>Research</h2>
                         <p>
-                            I'm interested in generative models and their applications in studying the brain. My current
-                            research focuses on semantic divisions within the human visual cortex.
+                            I am interested in understanding human perception and building better generative models and machines that are capable of human-like reasoning.
                         </p>
                     </td>
                 </tr>
@@ -69,6 +68,71 @@
 
             <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;">
                 <tbody>
+                <tr>
+                    <td style="padding:20px;width:25%;vertical-align:middle">
+                        <img src="./images/audionav.png" alt="PontTuset" width="160" style="border-style: none">
+                    </td>
+                    <td width="75%" valign="middle">
+                        <a href="https://arxiv.org/abs/2407.11333" id="audionav">
+                            <span class="papertitle">Disentangled Acoustic Fields For Multimodal Physical Scene Understanding</span>
+                        </a>
+                        <br>
+                        Jie Yin, <strong>Andrew F. Luo</strong>, <a href="https://yilundu.github.io/">Yilun Du</a>, <a href="https://www.merl.com/people/cherian"> Anoop Cherian</a>, <a herf="https://www.merl.com/people/tmarks">Tim K Marks</a>, <a href="https://www.jonathanleroux.org/">Jonathan Le Roux</a>, <a href="https://people.csail.mit.edu/ganchuang/">Chuang Gan</a>
+                        <br>
+                        <em>IROS 2024</em>
+                        <br>
+                        <a href="https://arxiv.org/abs/2407.11333">arxiv
+                            page</a> /
+                            <a href="data/diffusionpid_bib.html">bibtex</a>
+                        <p></p>
+                        <p>We investigate the problem of visual-acoustic navigation conditioned on a continuous acoustic field representation of audio.</p>
+                    </td>
+                </tr>
+
+                <tr>
+                    <td style="padding:20px;width:25%;vertical-align:middle">
+                        <img src="./images/brainsail_teaser.png" alt="PontTuset" width="160" style="border-style: none">
+                    </td>
+                    <td width="75%" valign="middle">
+                        <a href="https://arxiv.org/abs/2410.05266" id="brainsail">
+                            <span class="papertitle">Brain Mapping with Dense Features: Grounding Cortical Semantic Selectivity in Natural Images With Vision Transformers</span>
+                        </a>
+                        <br>
+                        <strong>Andrew F. Luo</strong>, Jacob Yeung, Rushikesh Zawar, Shaurya Dewan, <a href="https://www.maggie-henderson.com/">Margaret M. Henderson</a>, <a href="https://www.cs.cmu.edu/~lwehbe/">Leila Wehbe*</a>, <a href="https://sites.google.com/andrew.cmu.edu/tarrlab/people/michael-j-tarr">Michael J. Tarr*</a>
+                        <br>
+                        * Co-corresponding authors
+                        <br>
+                        <em>Arxiv, 2024 (in submission)</em>
+                        <br>
+                        <a href="https://arxiv.org/abs/2410.05266">arxiv
+                            page</a> /
+                            <a href="data/BrainSAIL_bib.html">bibtex</a>
+                        <p></p>
+                        <p>We propose an efficient gradient-free distillation module capable of extraction high quality dense CLIP embeddings, and utilize these embeddings to understand semantic selectivity in the visual cortex.</p>
+                    </td>
+                </tr>
+
+                <tr>
+                    <td style="padding:20px;width:25%;vertical-align:middle">
+                        <img src="./images/diffusionpid.png" alt="PontTuset" width="160" style="border-style: none">
+                    </td>
+                    <td width="75%" valign="middle">
+                        <a href="https://arxiv.org/abs/2406.05191" id="diffusionpid">
+                            <span class="papertitle">DiffusionPID: Interpreting Diffusion via Partial Information Decomposition</span>
+                        </a>
+                        <br>
+                        Shaurya Dewan, Rushikesh Zawar, Prakanshul Saxena, Yingshan Chang, <strong>Andrew F. Luo</strong>, <a href="https://talkingtorobots.com/yonatanbisk.html">Yonatan Bisk</a>
+                        <br>
+                        <em>NeurIPS 2024</em>
+                        <br>
+                        <a href="https://arxiv.org/abs/2406.05191">arxiv
+                            page</a> /
+                            <a href="data/diffusionpid_bib.html">bibtex</a>
+                        <p></p>
+                        <p>We leverage ideas from information theory to understand the contributions of individual text tokens and their interactions when generating images.</p>
+                    </td>
+                </tr>
+
                 <tr>
                     <td style="padding:20px;width:25%;vertical-align:middle">
                         <img src="./images/BrainSCUBA_teaser.png" alt="PontTuset" width="160" style="border-style: none">
