--- a/index.html
+++ b/index.html
@@ -28,14 +28,14 @@
                         </p>
                         <p>
                             I received my <a href="https://www.ml.cmu.edu/academics/joint-ml-phd.html">joint PhD in Neural
-                            Computation & Machine Learning</a> from Carnegie Mellon University, where I worked with <a
+                            Computation & Machine Learning</a> from Carnegie Mellon University (CMU), where I worked with <a
                                 href="https://www.cmu.edu/dietrich/psychology/directory/core-training-faculty/tarr-michael.html">Michael
                             Tarr</a> and <a
-                                href="https://www.cs.cmu.edu/~lwehbe/">Leila Wehbe</a>. I earned my undergraduate degree in Computer Science from MIT in 2019, and a Master of Science in Machine Learning Research from CMU. </p><p>My work focuses on understanding the computational principles underlying human visual perception and how these principles can inform the development of more intelligent machines. I use computational models, including deep generative models, to investigate how the brain processes visual stimuli and forms meaningful representations. Ultimately, I aim to bridge the gap between human and machine vision, leading to both a deeper understanding of human cognition and advancements in artificial intelligence.
+                                href="https://www.cs.cmu.edu/~lwehbe/">Leila Wehbe</a>. Before that, I earned my undergraduate degree in Computer Science from the Massachusetts Institute of Technology (MIT) in 2019, and a Master of Science in Machine Learning Research from CMU. </p><p>My work focuses on understanding the computational principles underlying human visual perception and how these principles can inform the development of more intelligent machines. I use computational models, including deep generative models, to investigate how the brain processes visual stimuli and forms meaningful representations. Ultimately, I aim to bridge the gap between human and machine vision, leading to both a deeper understanding of human cognition and advancements in artificial intelligence.
 
 
                         </p>
-                        <p>I am recruiting </p>
+                        <p style="font-size: 18px;color: seagreen">For 2024 Fall I am recruiting PhDs, master’s, and undergraduate students with a strong background in computational modeling and machine learning to join my research group. Remote collaboration opportunities are also available. Please send an email to aluo@hku.hk with a copy of your CV and a short statement about your interests.</p>
                         <p style="text-align:center">
                             <a href="mailto:luo_andrew@outlook.com">Email</a> &nbsp;/&nbsp;
                             <a href="mailto:aluo@hku.hk">HKU Email</a> &nbsp;/&nbsp;
@@ -68,26 +68,7 @@
 
             <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;">
                 <tbody>
-                <tr>
-                    <td style="padding:20px;width:25%;vertical-align:middle">
-                        <img src="./images/audionav.png" alt="PontTuset" width="160" style="border-style: none">
-                    </td>
-                    <td width="75%" valign="middle">
-                        <a href="https://arxiv.org/abs/2407.11333" id="audionav">
-                            <span class="papertitle">Disentangled Acoustic Fields For Multimodal Physical Scene Understanding</span>
-                        </a>
-                        <br>
-                        Jie Yin, <strong>Andrew F. Luo</strong>, <a href="https://yilundu.github.io/">Yilun Du</a>, <a href="https://www.merl.com/people/cherian"> Anoop Cherian</a>, <a herf="https://www.merl.com/people/tmarks">Tim K Marks</a>, <a href="https://www.jonathanleroux.org/">Jonathan Le Roux</a>, <a href="https://people.csail.mit.edu/ganchuang/">Chuang Gan</a>
-                        <br>
-                        <em>IROS 2024</em>
-                        <br>
-                        <a href="https://arxiv.org/abs/2407.11333">arxiv
-                            page</a> /
-                            <a href="data/diffusionpid_bib.html">bibtex</a>
-                        <p></p>
-                        <p>We investigate the problem of visual-acoustic navigation conditioned on a continuous acoustic field representation of audio.</p>
-                    </td>
-                </tr>
+
 
                 <tr>
                     <td style="padding:20px;width:25%;vertical-align:middle">
@@ -111,7 +92,26 @@
                         <p>We propose an efficient gradient-free distillation module capable of extraction high quality dense CLIP embeddings, and utilize these embeddings to understand semantic selectivity in the visual cortex.</p>
                     </td>
                 </tr>
-
+                <tr>
+                    <td style="padding:20px;width:25%;vertical-align:middle">
+                        <img src="./images/audionav.png" alt="PontTuset" width="160" style="border-style: none">
+                    </td>
+                    <td width="75%" valign="middle">
+                        <a href="https://arxiv.org/abs/2407.11333" id="audionav">
+                            <span class="papertitle">Disentangled Acoustic Fields For Multimodal Physical Scene Understanding</span>
+                        </a>
+                        <br>
+                        Jie Yin, <strong>Andrew F. Luo</strong>, <a href="https://yilundu.github.io/">Yilun Du</a>, <a href="https://www.merl.com/people/cherian"> Anoop Cherian</a>, <a herf="https://www.merl.com/people/tmarks">Tim K Marks</a>, <a href="https://www.jonathanleroux.org/">Jonathan Le Roux</a>, <a href="https://people.csail.mit.edu/ganchuang/">Chuang Gan</a>
+                        <br>
+                        <em>IROS 2024</em>
+                        <br>
+                        <a href="https://arxiv.org/abs/2407.11333">arxiv
+                            page</a> /
+                            <a href="data/AudioNav_bib.html">bibtex</a>
+                        <p></p>
+                        <p>We investigate the problem of visual-acoustic navigation conditioned on a continuous acoustic field representation of audio.</p>
+                    </td>
+                </tr>
                 <tr>
                     <td style="padding:20px;width:25%;vertical-align:middle">
                         <img src="./images/diffusionpid.png" alt="PontTuset" width="160" style="border-style: none">
