--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 
 
                         </p>
-                        <p style="font-size: 18px;color: seagreen">For 2024 Fall I am recruiting PhDs, master’s, and undergraduate students with a strong background in computational modeling and machine learning to join my research group. Remote collaboration opportunities are also available. Please send an email to aluo@hku.hk with a copy of your CV and a short statement about your interests.</p>
+<!--                        <p style="font-size: 18px;color: seagreen">For 2024 Fall I am recruiting PhDs, master’s, and undergraduate students with a strong background in computational modeling and machine learning to join my research group. Remote collaboration opportunities are also available. Please send an email to aluo@hku.hk with a copy of your CV and a short statement about your interests.</p>-->
                         <p style="text-align:center">
                             <a href="mailto:luo_andrew@outlook.com">Email</a> &nbsp;/&nbsp;
                             <a href="mailto:aluo@hku.hk">HKU Email</a> &nbsp;/&nbsp;
