--- a/index.html
+++ b/index.html
@@ -28,8 +28,7 @@
                         </p>
                         <p>
                             I received my <a href="https://www.ml.cmu.edu/academics/joint-ml-phd.html">joint PhD in Neural
-                            Computation & Machine Learning</a> from Carnegie Mellon University (CMU), where I worked with <a
-                                href="https://www.cmu.edu/dietrich/psychology/directory/core-training-faculty/tarr-michael.html">Michael
+                            Computation & Machine Learning</a> from Carnegie Mellon University (CMU), where I worked with <a href="https://www.cmu.edu/dietrich/psychology/directory/core-training-faculty/tarr-michael.html">Michael
                             Tarr</a> and <a
                                 href="https://www.cs.cmu.edu/~lwehbe/">Leila Wehbe</a>. Before that, I earned my undergraduate degree in Computer Science from the Massachusetts Institute of Technology (MIT) in 2019, and a Master of Science in Machine Learning Research from CMU. </p><p>My work focuses on understanding the computational principles underlying human visual perception and how these principles can inform the development of more intelligent machines. I use computational models, including deep generative models, to investigate how the brain processes visual stimuli and forms meaningful representations. Ultimately, I aim to bridge the gap between human and machine vision, leading to both a deeper understanding of human cognition and advancements in artificial intelligence.
 
