--- a/chinese.html
+++ b/chinese.html
@@ -24,17 +24,16 @@
                         <p class="name" style="text-align: center;">
                             Andrew Luo
                         </p>
-                        <p> I am a tenure-track Assistant Professor at the <a href="https://www.hku.hk/">University of Hong Kong</a> jointly appointed by <a href="https://datascience.hku.hk/">Musketeers Foundation Institute of Data Science</a> and the <a href="https://psychology.hku.hk/people/andrew-luo/">Psychology Department</a> starting in 2024 November.
+                        <p> 我是<a href="https://www.hku.hk/">香港大学</a>助理教授，由香港大学<a href="https://datascience.hku.hk/">数据科学研究院</a>和<a href="https://psychology.hku.hk/people/andrew-luo/">心理学系</a>于 2024 年 11 月合聘。
                         </p>
                         <p>
-                            I received my <a href="https://www.ml.cmu.edu/academics/joint-ml-phd.html">joint PhD in Neural
-                            Computation & Machine Learning</a> from Carnegie Mellon University (CMU) in 2024, where I worked with <a href="https://www.cmu.edu/dietrich/psychology/directory/core-training-faculty/tarr-michael.html">Michael
+                            我在2024从卡内基梅隆大学 (CMU) 获得了<a href="https://www.ml.cmu.edu/academics/joint-ml-phd.html">神经计算和机器学习联合博士学位</a>。在那里我与 <a href="https://www.cmu.edu/dietrich/psychology/directory/core-training-faculty/tarr-michael.html">Michael
                             Tarr</a> and <a
-                                href="https://www.cs.cmu.edu/~lwehbe/">Leila Wehbe</a>. Before that, I earned my undergraduate degree in Computer Science from the Massachusetts Institute of Technology (MIT) in 2019, and a Master of Science in Machine Learning Research from CMU. </p><p>My work focuses on understanding the computational principles underlying human visual perception and how these principles can inform the development of more intelligent machines. I use computational models, including deep generative models, to investigate how the brain processes visual stimuli and forms meaningful representations. Ultimately, I aim to bridge the gap between human and machine vision, leading to both a deeper understanding of human cognition and advancements in artificial intelligence.
+                                href="https://www.cs.cmu.edu/~lwehbe/">Leila Wehbe</a> 一起工作。在此之前，我于 2019 年获得了麻省理工学院 (MIT) 计算机科学本科学位，并从 CMU 获得了机器学习研究理学硕士学位。 </p><p>我的工作重点是理解人类视觉感知背后的计算原理，以及这些原理如何为更智能机器的开发提供信息。我使用计算模型（包括深度生成模型）来研究大脑如何处理视觉刺激并形成有意义的表征。最终，我的目标是弥合人类和机器视觉之间的差距，从而加深对人类认知的理解和人工智能的进步。
 
 
                         </p>
-<!--                        <p style="font-size: 18px;color: seagreen">For 2024 Fall I am recruiting PhDs candidates, master’s candidates, and undergraduate students with a strong background in computational modeling and machine learning to join my research group. Remote collaboration opportunities are also available. Please send an email to aluo@hku.hk with a copy of your CV and a short statement about your interests.</p>-->
+                        <p style="font-size: 18px;color: seagreen">2024 年末，我正在招有计算建模和机器学习背景的博士生、硕士生和本科生加入我的研究小组。还提供远程协作机会。请发送电子邮件至 aluo@hku.hk，附上简历和自我介绍。</p>
                         <p style="text-align:center">
                             <a href="mailto:luo_andrew@outlook.com">Email</a> &nbsp;/&nbsp;
                             <a href="mailto:aluo@hku.hk">HKU Email</a> &nbsp;/&nbsp;
@@ -42,7 +41,7 @@
                             <!--                  <a href="https://twitter.com/jon_barron">Twitter</a> &nbsp;/&nbsp;-->
                             <a href="https://github.com/aluo-x">Github</a>&nbsp;/&nbsp;
                             <a href="./wechat.html">WeChat</a> /
-                            <a href="./chinese.html">中文</a>
+                            <a href="./index.html">English</a>
                         </p>
                     </td>
                     <td style="padding:2.5%;width:40%;max-width:40%">
@@ -57,9 +56,9 @@
                 <tbody>
                 <tr>
                     <td style="padding:20px;width:100%;vertical-align:middle">
-                        <h2>Research</h2>
+                        <h2>研究</h2>
                         <p>
-                            I am interested in understanding human perception and building better generative models and machines that are capable of human-like reasoning.
+                            我想理解人类的感知机理，并构建更好的生成模型和具有类人推理能力的机器。
                         </p>
                     </td>
                 </tr>
