--- a/chinese.html
+++ b/chinese.html
@@ -29,7 +29,7 @@
                         <p>
                             我在2024从卡内基梅隆大学 (CMU) 获得了<a href="https://www.ml.cmu.edu/academics/joint-ml-phd.html">神经计算和机器学习联合博士学位</a>。在那里我与 <a href="https://www.cmu.edu/dietrich/psychology/directory/core-training-faculty/tarr-michael.html">Michael
                             Tarr</a> and <a
-                                href="https://www.cs.cmu.edu/~lwehbe/">Leila Wehbe</a> 一起工作。在此之前，我于 2019 年获得了麻省理工学院 (MIT) 计算机科学本科学位，并从 CMU 获得了机器学习研究理学硕士学位。 </p><p>我的工作重点是理解人类视觉感知背后的计算原理，以及这些原理如何为更智能机器的开发提供信息。我使用计算模型（包括深度生成模型）来研究大脑如何处理视觉刺激并形成有意义的表征。最终，我的目标是弥合人类和机器视觉之间的差距，从而加深对人类认知的理解和人工智能的进步。
+                                href="https://www.cs.cmu.edu/~lwehbe/">Leila Wehbe</a> 一起工作。在此之前，我于 2019 年获得了麻省理工学院 (MIT) 计算机科学本科学位，并从 CMU 获得了机器学习硕士学位。 </p><p>我的工作重点是理解人类视觉感知背后的计算原理，以及这些原理如何为更智能机器的开发提供信息。我使用计算模型（包括深度生成模型）来研究大脑如何处理视觉刺激并形成有意义的表征。最终，我的目标是弥合人类和机器视觉之间的差距，从而加深对人类认知的理解和人工智能的进步。
 
 
                         </p>
