--- a/chinese.html
+++ b/chinese.html
@@ -33,7 +33,7 @@
 
 
                         </p>
-                        <p style="font-size: 18px;color: seagreen">2024 年末，我正在招有计算建模和机器学习背景的博士生、硕士生和本科生加入我的研究小组。还提供远程协作机会。请发送电子邮件至 aluo@hku.hk，附上简历和自我介绍。</p>
+                        <p style="font-size: 18px;color: seagreen">2024 年末，我正在招有<u>视觉生成模型</u>，<u>机器视觉</u>，和<u>神经计算</u>背景的博士生、硕士生和本科生加入我的研究小组。也提供远程协作机会。请发送电子邮件至 aluo@hku.hk，附上简历和自我介绍。</p>
                         <p style="text-align:center">
                             <a href="mailto:luo_andrew@outlook.com">Email</a> &nbsp;/&nbsp;
                             <a href="mailto:aluo@hku.hk">HKU Email</a> &nbsp;/&nbsp;
@@ -100,7 +100,7 @@
                             <span class="papertitle">Disentangled Acoustic Fields For Multimodal Physical Scene Understanding</span>
                         </a>
                         <br>
-                        Jie Yin, <strong>Andrew F. Luo</strong>, <a href="https://yilundu.github.io/">Yilun Du</a>, <a href="https://www.merl.com/people/cherian"> Anoop Cherian</a>, <a herf="https://www.merl.com/people/tmarks">Tim K Marks</a>, <a href="https://www.jonathanleroux.org/">Jonathan Le Roux</a>, <a href="https://people.csail.mit.edu/ganchuang/">Chuang Gan</a>
+                        Jie Yin, <strong>Andrew F. Luo</strong>, <a href="https://yilundu.github.io/">Yilun Du</a>, <a href="https://www.merl.com/people/cherian"> Anoop Cherian</a>, <a href="https://www.merl.com/people/tmarks">Tim K Marks</a>, <a href="https://www.jonathanleroux.org/">Jonathan Le Roux</a>, <a href="https://people.csail.mit.edu/ganchuang/">Chuang Gan</a>
                         <br>
                         <em>IROS 2024</em>
                         <br>
