--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 
 
                         </p>
-<!--                        <p style="font-size: 18px;color: seagreen">For 2024 Fall I am recruiting PhDs candidates, master’s candidates, and undergraduate students with a strong background in computational modeling and machine learning to join my research group. Remote collaboration opportunities are also available. Please send an email to aluo@hku.hk with a copy of your CV and a short statement about your interests.</p>-->
+                        <p style="font-size: 18px;color: seagreen">For 2024 Fall I am recruiting PhDs candidates, master’s candidates, and undergraduate students with a background in <u>image generative models</u>, <u>computer vision</u>, and <u>NeuroAI</u> to join my research group. Remote collaboration opportunities are also available. Please send an email to aluo@hku.hk with a copy of your CV and a short statement about your interests.</p>
                         <p style="text-align:center">
                             <a href="mailto:luo_andrew@outlook.com">Email</a> &nbsp;/&nbsp;
                             <a href="mailto:aluo@hku.hk">HKU Email</a> &nbsp;/&nbsp;
@@ -101,7 +101,7 @@
                             <span class="papertitle">Disentangled Acoustic Fields For Multimodal Physical Scene Understanding</span>
                         </a>
                         <br>
-                        Jie Yin, <strong>Andrew F. Luo</strong>, <a href="https://yilundu.github.io/">Yilun Du</a>, <a href="https://www.merl.com/people/cherian"> Anoop Cherian</a>, <a herf="https://www.merl.com/people/tmarks">Tim K Marks</a>, <a href="https://www.jonathanleroux.org/">Jonathan Le Roux</a>, <a href="https://people.csail.mit.edu/ganchuang/">Chuang Gan</a>
+                        Jie Yin, <strong>Andrew F. Luo</strong>, <a href="https://yilundu.github.io/">Yilun Du</a>, <a href="https://www.merl.com/people/cherian"> Anoop Cherian</a>, <a href="https://www.merl.com/people/tmarks">Tim K Marks</a>, <a href="https://www.jonathanleroux.org/">Jonathan Le Roux</a>, <a href="https://people.csail.mit.edu/ganchuang/">Chuang Gan</a>
                         <br>
                         <em>IROS 2024</em>
                         <br>
