--- a/chinese.html
+++ b/chinese.html
@@ -27,13 +27,13 @@
                         <p> 我是<a href="https://www.hku.hk/">香港大学</a>助理教授，由香港大学<a href="https://datascience.hku.hk/">数据科学研究院</a>和<a href="https://psychology.hku.hk/people/andrew-luo/">心理学系</a>于 2024 年 10 月合聘。
                         </p>
                         <p>
-                            我在2024从卡内基梅隆大学 (CMU) 获得了<a href="https://www.ml.cmu.edu/academics/joint-ml-phd.html#:~:text=PhD%20in%20Neural%20Computation%20%26%20Machine%20Learning"><u>机器学习</u>和<u>神经计算</u>联合博士学位</a>。在那里我与 <a href="https://www.cmu.edu/dietrich/psychology/directory/core-training-faculty/tarr-michael.html">Michael
+                            我在2024从卡内基梅隆大学 (CMU) 获得了<a href="https://www.ml.cmu.edu/academics/joint-ml-phd.html#:~:text=PhD%20in%20Neural%20Computation%20%26%20Machine%20Learning"><u>机器学习</u>和<u>计算神经科学</u>联合博士学位</a>。在那里我与 <a href="https://www.cmu.edu/dietrich/psychology/directory/core-training-faculty/tarr-michael.html">Michael
                             Tarr</a> and <a
                                 href="https://www.cs.cmu.edu/~lwehbe/">Leila Wehbe</a> 一起工作。在此之前，我于 2019 年获得了麻省理工学院 (MIT) 计算机科学本科学位，并从 CMU 获得了机器学习硕士学位。 </p><p>我的工作重点是理解人类视觉感知背后的计算原理，以及这些原理如何为更智能机器的开发提供信息。我使用计算模型（包括深度生成模型）来研究大脑如何处理视觉刺激并形成有意义的表征。最终，我的目标是弥合人类和机器视觉之间的差距，从而加深对人类认知的理解和人工智能的进步。
 
 
                         </p>
-                        <p style="font-size: 18px;color: seagreen">2024 年末，我正在招有<u>图像生成模型</u>，<u>机器视觉</u>，和<u>神经计算</u>背景的博士生、硕士生和本科生加入我的研究小组。也提供远程协作机会。请发送电子邮件至 aluo@hku.hk，附上简历和自我介绍。</p>
+                        <p style="font-size: 18px;color: seagreen">2024 年末，我正在招有<u>图像生成模型</u>，<u>机器视觉</u>，和<u>计算神经科学</u>背景的博士生、硕士生和本科生加入我的研究小组。也提供远程协作机会。请发送电子邮件至 aluo@hku.hk，附上简历和自我介绍。</p>
                         <p style="text-align:center">
                             <a href="mailto:luo_andrew@outlook.com">Email</a> &nbsp;/&nbsp;
                             <a href="mailto:aluo@hku.hk">HKU Email</a> &nbsp;/&nbsp;
