--- a/chinese.html
+++ b/chinese.html
@@ -154,7 +154,7 @@
                 </tr>
                 <tr>
                     <td style="padding:20px;width:25%;vertical-align:middle">
-                        <img src="images/Brain_DiVE_teaser.png" alt="PontTuset" width="160" style="border-style: none">
+                        <img src="images/Brain_DiVE_teaser_small.jpg" alt="PontTuset" width="160" style="border-style: none">
                     </td>
                     <td width="75%" valign="middle">
                         <a href="https://arxiv.org/abs/2306.03089" id="braindive">
