--- a/chinese.html
+++ b/chinese.html
@@ -33,7 +33,7 @@
 
 
                         </p>
-                        <p style="font-size: 18px;color: seagreen">2024 年末，我正在招有<u>图像生成模型</u>，<u>机器视觉</u>，和<u>计算神经科学</u>背景的博士生、硕士生和本科生加入我的研究小组。也提供远程协作机会。请发送电子邮件至 aluo@hku.hk，附上简历和自我介绍。</p>
+                        <p style="font-size: 18px;color: seagreen">2024 年末，我正在招有<u>图像生成模型</u>，<u>机器视觉</u>，和<u>计算神经科学</u>背景的博士生加入我的研究团队。也欢迎博士生，硕士生和本科生远程合作或者远程RA。请发送电子邮件至 aluo@hku.hk，附上简历和自我介绍。</p>
                         <p style="text-align:center">
                             <a href="mailto:luo_andrew@outlook.com">Email</a> &nbsp;/&nbsp;
                             <a href="mailto:aluo@hku.hk">HKU Email</a> &nbsp;/&nbsp;
