--- a/index.html
+++ b/index.html
@@ -33,8 +33,9 @@
 
 
                         </p>
-                        <p style="font-size: 18px;color: seagreen">For 2024 Winter and 2025 Fall -- I am recruiting PhDs candidates with a background in <u>computer vision</u>, <u>AI for Neuroscience (NeuroAI)</u>, and <u>image generative models</u> to join my research group (HKU PhD Admission). I also welcome RAs (remote or in-person) or remote collaboration with PhDs, master's, and undergraduates. Please send an email to aluo@hku.hk with a copy of your CV and a short statement about your interests.</p>
-                        <p style="font-size: 18px;color: seagreen">2024 Nov 25 update: I have completed PhD student hiring for IDS this upcoming cycle. I continue to recruit PhD applicants through the Psychology department.</p>
+<!--                        <p style="font-size: 18px;color: seagreen">For 2024 Winter and 2025 Fall &#45;&#45; I am recruiting PhDs candidates with a background in <u>computer vision</u>, <u>AI for Neuroscience (NeuroAI)</u>, and <u>image generative models</u> to join my research group (HKU PhD Admission). I also welcome RAs (remote or in-person) or remote collaboration with PhDs, master's, and undergraduates. Please send an email to aluo@hku.hk with a copy of your CV and a short statement about your interests.</p>-->
+<!--                        <p style="font-size: 18px;color: seagreen">2024 Nov 25 update: I have completed PhD student hiring for IDS this upcoming cycle. I continue to recruit PhD applicants through the Psychology department.</p>-->
+                        <p style="font-size: 18px;color: seagreen">I have completed PhD student hiring for the 2025 Fall cycle. I welcome RAs (remote or in-person) or remote collaboration with PhDs, master's, and undergraduates.</p>
 
                         <p style="text-align:center">
                             <a href="mailto:luo_andrew@outlook.com">Email</a> &nbsp;/&nbsp;
