--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
                         <br>
                         * Co-corresponding authors
                         <br>
-                        <em>Arxiv, 2024 (in submission)</em>
+                        <em>ICLR 2025</em>
                         <br>
                         <a href="https://arxiv.org/abs/2410.05266">arxiv
                             page</a> /
