--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
                             <span class="papertitle">Brain Mapping with Dense Features: Grounding Cortical Semantic Selectivity in Natural Images With Vision Transformers</span>
                         </a>
                         <br>
-                        <strong>Andrew F. Luo</strong>, Jacob Yeung, Rushikesh Zawar, Shaurya Dewan, <a href="https://www.maggie-henderson.com/">Margaret M. Henderson</a>, <a href="https://www.cs.cmu.edu/~lwehbe/">Leila Wehbe*</a>, <a href="https://sites.google.com/andrew.cmu.edu/tarrlab/people/michael-j-tarr">Michael J. Tarr*</a>
+                        <strong>Andrew F. Luo</strong>, <a href="https://jacobyeung.org/">Jacob Yeung</a>, Rushikesh Zawar, Shaurya Dewan, <a href="https://www.maggie-henderson.com/">Margaret M. Henderson</a>, <a href="https://www.cs.cmu.edu/~lwehbe/">Leila Wehbe*</a>, <a href="https://sites.google.com/andrew.cmu.edu/tarrlab/people/michael-j-tarr">Michael J. Tarr*</a>
                         <br>
                         * Co-corresponding authors
                         <br>
