--- a/index.html
+++ b/index.html
@@ -76,13 +76,13 @@
                         <img src="./images/brainnerds_compressed.png" alt="PontTuset" width="160" style="border-style: none">
                     </td>
                     <td width="75%" valign="middle">
-                        <a href="https://arxiv.org/abs/2410.05266" id="brainnerd">
+                        <a href="https://arxiv.org/abs/2406.02659" id="brainnerd">
                             <span class="papertitle">Reanimating Images using Neural Representations of Dynamic Stimuli</span>
                         </a>
                         <br>
                         <a href="https://jacobyeung.org/">Jacob Yeung</a>, <strong>Andrew F. Luo</strong>, <a href="https://gabesarch.me/">Gabriel Sarch</a>, <a href="https://www.maggie-henderson.com/">Margaret M. Henderson</a>, <a href="https://www.cs.cmu.edu/~deva/">Deva Ramanan</a>, <a href="https://sites.google.com/andrew.cmu.edu/tarrlab/people/michael-j-tarr">Michael J. Tarr</a>
                         <br>
-                        <br>
+
                         <em>CVPR 2025</em>
                         <br>
                         <a href="https://arxiv.org/abs/2406.02659">arxiv
@@ -103,7 +103,7 @@
                             <span class="papertitle">Brain Mapping with Dense Features: Grounding Cortical Semantic Selectivity in Natural Images With Vision Transformers</span>
                         </a>
                         <br>
-                        <strong>Andrew F. Luo</strong>, <a href="https://jacobyeung.org/">Jacob Yeung</a>, Rushikesh Zawar, Shaurya Dewan, <a href="https://www.maggie-henderson.com/">Margaret M. Henderson</a>, <a href="https://www.cs.cmu.edu/~lwehbe/">Leila Wehbe*</a>, <a href="https://sites.google.com/andrew.cmu.edu/tarrlab/people/michael-j-tarr">Michael J. Tarr*</a>
+                        <strong>Andrew F. Luo</strong>, <a href="https://jacobyeung.org/">Jacob Yeung</a>, <a href="https://github.com/RBZ-99">Rushikesh Zawar</a>, <a href="https://srdewan.github.io/">Shaurya Dewan</a>, <a href="https://www.maggie-henderson.com/">Margaret M. Henderson</a>, <a href="https://www.cs.cmu.edu/~lwehbe/">Leila Wehbe*</a>, <a href="https://sites.google.com/andrew.cmu.edu/tarrlab/people/michael-j-tarr">Michael J. Tarr*</a>
                         <br>
                         * Co-corresponding authors
                         <br>
@@ -125,7 +125,7 @@
                             <span class="papertitle">Disentangled Acoustic Fields For Multimodal Physical Scene Understanding</span>
                         </a>
                         <br>
-                        Jie Yin, <strong>Andrew F. Luo</strong>, <a href="https://yilundu.github.io/">Yilun Du</a>, <a href="https://www.merl.com/people/cherian"> Anoop Cherian</a>, <a href="https://www.merl.com/people/tmarks">Tim K Marks</a>, <a href="https://www.jonathanleroux.org/">Jonathan Le Roux</a>, <a href="https://people.csail.mit.edu/ganchuang/">Chuang Gan</a>
+                        <a href="https://github.com/sjtuyinjie">Jie Yin</a>, <strong>Andrew F. Luo</strong>, <a href="https://yilundu.github.io/">Yilun Du</a>, <a href="https://www.merl.com/people/cherian"> Anoop Cherian</a>, <a href="https://www.merl.com/people/tmarks">Tim K Marks</a>, <a href="https://www.jonathanleroux.org/">Jonathan Le Roux</a>, <a href="https://people.csail.mit.edu/ganchuang/">Chuang Gan</a>
                         <br>
                         <em>IROS 2024</em>
                         <br>
@@ -145,7 +145,7 @@
                             <span class="papertitle">DiffusionPID: Interpreting Diffusion via Partial Information Decomposition</span>
                         </a>
                         <br>
-                        Shaurya Dewan, Rushikesh Zawar, Prakanshul Saxena, Yingshan Chang, <strong>Andrew F. Luo</strong>, <a href="https://talkingtorobots.com/yonatanbisk.html">Yonatan Bisk</a>
+                        <a href="https://srdewan.github.io/">Shaurya Dewan</a>, <a href="https://github.com/RBZ-99">Rushikesh Zawar</a>, <a href="https://scholar.google.com/citations?user=3Qqm9ycAAAAJ&hl=en">Prakanshul Saxena</a>, <a href="https://zdxdsw.github.io/">Yingshan Chang</a>, <strong>Andrew F. Luo</strong>, <a href="https://talkingtorobots.com/yonatanbisk.html">Yonatan Bisk</a>
                         <br>
                         <em>NeurIPS 2024</em>
                         <br>
