--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
                         <a href="https://jacobyeung.org/">Jacob Yeung</a>, <strong>Andrew F. Luo</strong>, <a href="https://gabesarch.me/">Gabriel Sarch</a>, <a href="https://www.maggie-henderson.com/">Margaret M. Henderson</a>, <a href="https://www.cs.cmu.edu/~deva/">Deva Ramanan</a>, <a href="https://sites.google.com/andrew.cmu.edu/tarrlab/people/michael-j-tarr">Michael J. Tarr</a>
                         <br>
 
-                        <em>CVPR 2025</em>
+                        <span style="color:orangered;"> <em>CVPR 2025</em> oral</span>
                         <br>
                         <a href="https://arxiv.org/abs/2406.02659">arxiv
                             page</a> /
