--- a/chinese.html
+++ b/chinese.html
@@ -71,6 +71,28 @@
             <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;">
                 <tbody>
 
+                <tr>
+                    <td style="padding:20px;width:25%;vertical-align:middle">
+                        <img src="./images/brainnerds_compressed.png" alt="PontTuset" width="160" style="border-style: none">
+                    </td>
+                    <td width="75%" valign="middle">
+                        <a href="https://arxiv.org/abs/2406.02659" id="brainnerd">
+                            <span class="papertitle">Reanimating Images using Neural Representations of Dynamic Stimuli</span>
+                        </a>
+                        <br>
+                        <a href="https://jacobyeung.org/">Jacob Yeung</a>, <strong>Andrew F. Luo</strong>, <a href="https://gabesarch.me/">Gabriel Sarch</a>, <a href="https://www.maggie-henderson.com/">Margaret M. Henderson</a>, <a href="https://www.cs.cmu.edu/~deva/">Deva Ramanan</a>, <a href="https://sites.google.com/andrew.cmu.edu/tarrlab/people/michael-j-tarr">Michael J. Tarr</a>
+                        <br>
+
+                        <span style="color:orangered;"> <em>CVPR 2025</em> oral</span>
+                        <br>
+                        <a href="https://arxiv.org/abs/2406.02659">arxiv
+                            page</a> /
+                            <a href="data/BrainNerd_bib.html">bibtex</a>
+                        <p></p>
+                        <p>We propose image-conditioned decoding of perceived motion from fMRI data, we show that this can be used to animate images with an video diffusion model.</p>
+                    </td>
+                </tr>
+
 
                 <tr>
                     <td style="padding:20px;width:25%;vertical-align:middle">
