--- a/chinese.html
+++ b/chinese.html
@@ -73,6 +73,30 @@
 
                 <tr>
                     <td style="padding:20px;width:25%;vertical-align:middle">
+                        <img src="./images/Brain_CoRL_teaser.jpg" alt="PontTuset" width="160" style="border-style: none">
+                    </td>
+                    <td width="75%" valign="middle">
+                        <a href="https://arxiv.org/abs/2505.15813" id="braincorl">
+                            <span class="papertitle">Meta-Learning an In-Context Transformer Model of Human Higher Visual Cortex
+</span>
+                        </a>
+                        <br>
+                        <a href="https://scholar.google.com/citations?hl=en&user=8fm4uE8AAAAJ">Muquan Yu</a>, <a href="https://openreview.net/profile?id=~Mu_Nan2">Mu Nan</a>, <a href="https://hosseinadeli.github.io/">Hossein Adeli</a>, <a href="https://jacob-prince.github.io/">Jacob S. Prince</a>, <a href="https://psych.uw.edu/people/9200">John A. Pyles</a>, <a href="https://www.cs.cmu.edu/~lwehbe/">Leila Wehbe</a>, <a href="https://www.maggie-henderson.com/">Margaret M. Henderson</a>, <a href="https://sites.google.com/andrew.cmu.edu/tarrlab/people/michael-j-tarr">Michael J. Tarr</a>, <strong>Andrew F. Luo</strong>
+                        <br>
+
+                        <span> <em>in submission</em> </span>
+                        <br>
+                        <a href="https://arxiv.org/abs/2505.15813">arxiv
+                            page</a> /
+                            <a href="data/Braincorl_bib.html">bibtex</a>
+                        <p></p>
+                        <p>We show how to construct high-visual cortex encoders that can generalize across subjects, scanners, voxel sizes, protocols, and images without any additional finetuning by using meta-learning across subjects and in-context learning across stimuli.</p>
+                    </td>
+                </tr>
+
+
+                <tr>
+                    <td style="padding:20px;width:25%;vertical-align:middle">
                         <img src="./images/brainnerds_compressed.png" alt="PontTuset" width="160" style="border-style: none">
                     </td>
                     <td width="75%" valign="middle">
